# sim-plugin-gmsh

./: README.md  pyproject.toml
src/sim_plugin_gmsh/: __init__.py
tests/: test_gmsh_driver.py  test_gmsh_e2e.py  test_protocol.py  test_wheel_contents.py
