[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-plugin-gmsh"
version = "0.1.0"
description = "Gmsh driver for sim."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Weiqi Ji", email = "jiweiqi10@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "sim-runtime @ git+https://github.com/svd-ai-lab/sim-cli@v0.2.4",
    # TODO(reviewer): pin the gmsh SDK here, e.g. "gmsh>=X.Y"
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "build>=1.0",
]

[project.entry-points."sim.drivers"]
gmsh = "sim_plugin_gmsh:GmshDriver"

[project.entry-points."sim.skills"]
gmsh = "sim_plugin_gmsh:skills_dir"

[project.entry-points."sim.plugins"]
gmsh = "sim_plugin_gmsh:plugin_info"

[project.urls]
Homepage = "https://github.com/svd-ai-lab/sim-plugin-gmsh"
Issues = "https://github.com/svd-ai-lab/sim-plugin-gmsh/issues"

[tool.hatch.metadata]
# Required because `sim-runtime` is pinned to a git+https URL — sim-cli is
# distributed via GitHub, not PyPI. See sim-proj memory: plugin distribution
# is GitHub-only.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sim_plugin_gmsh"]
